--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,13 @@ export(DEA)
 export(calDrivingForce)
 export(dataPerProcessing)
 export(getDriverGenes)
+export(getDriverRelatedPathway)
 export(getReactomePathway)
+export(getRegulatoryPath)
 export(pAbnormalPathway)
 import(doParallel)
 import(foreach)
+import(igraph)
 import(org.Hs.eg.db)
 import(parallel)
 importFrom(AnnotationDbi,select)
