--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Authors@R:
            email="zhangsw@nwpu.edu.cn",
            ))
 Imports: downloader, DESeq2, doParallel, foreach, gtools, parallel, AnnotationDbi, 
-         org.Hs.eg.db, clusterProfiler, stats, xfun, utils, igraph
+         org.Hs.eg.db, clusterProfiler, stats, xfun, utils, igraph, TCGAbiolinks,
+         plyr, purrr, R.utils, readr, magrittr, dplyr
 Description: What the package does (one paragraph).
 License: GPL (>= 3)
 Encoding: UTF-8
