--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(getDriverRelatedPathway)
 export(getReactomePathway)
 export(getRegulatoryPath)
 export(pAbnormalPathway)
+export(getDatafromTCGA)
 import(doParallel)
 import(foreach)
 import(igraph)
@@ -22,3 +23,17 @@ importFrom(stats,median)
 importFrom(stats,p.adjust)
 importFrom(utils,read.delim)
 importFrom(xfun,is_windows)
+importFrom(TCGAbiolinks,GDCquery)
+importFrom(TCGAbiolinks,colDataPrepare)
+importFrom(TCGAbiolinks,TCGAquery_SampleTypes)
+importFrom(TCGAbiolinks,GDCdownload)
+importFrom(TCGAbiolinks,getGDCprojects)
+importFrom(plyr,alply)
+importFrom(plyr,adply)
+importFrom(purrr,map_df)
+importFrom(downloader,download)
+importFrom(R.utils,gunzip)
+importFrom(readr,cols)
+importFrom(readr,read_tsv)
+importFrom(magrittr,%>%)
+importFrom(dplyr,bind_cols)
