--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ import(foreach)
 import(igraph)
 import(org.Hs.eg.db)
 import(parallel)
+import(magrittr)
 importFrom(AnnotationDbi,select)
 importFrom(DESeq2,estimateSizeFactorsForMatrix)
 importFrom(clusterProfiler,enricher)
@@ -35,5 +36,4 @@ importFrom(downloader,download)
 importFrom(R.utils,gunzip)
 importFrom(readr,cols)
 importFrom(readr,read_tsv)
-importFrom(magrittr,%>%)
 importFrom(dplyr,bind_cols)
