--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ import(igraph)
 import(org.Hs.eg.db)
 import(parallel)
 import(magrittr)
+import(progress)
 importFrom(AnnotationDbi,select)
 importFrom(DESeq2,estimateSizeFactorsForMatrix)
 importFrom(clusterProfiler,enricher)
