--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ import(igraph)
 import(org.Hs.eg.db)
 import(parallel)
 import(magrittr)
-import(progress)
+import(doSNOW)
 importFrom(AnnotationDbi,select)
 importFrom(DESeq2,estimateSizeFactorsForMatrix)
 importFrom(clusterProfiler,enricher)
