--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ import(igraph)
 import(org.Hs.eg.db)
 import(magrittr)
 import(doSNOW)
+import(foreach)
+import(parallel)
 importFrom(AnnotationDbi,select)
 importFrom(DESeq2,estimateSizeFactorsForMatrix)
 importFrom(clusterProfiler,enricher)
